--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <a class="navbar-brand" href="#">Complex UI</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
+            
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -123,7 +124,7 @@
           <img src="./camp.jpg" class="card-img-top" alt="camp">
           <div class="card-body">
             <h5 class="card-title">Person's Camping Tent</h5>
-            <p class="card-text">Silhouette of Person Standing Near Camping Tent
+            <p class="card-text">Silhouette of the Person Standing Near Camping Tent
               .</p>
             <a href="https://www.pexels.com/search/camping/" class="btn btn-primary">Call to Action</a>
           </div>
